@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-06T08:28:26Z",
+  "timestamp" : "2022-07-07T02:21:43Z",
   "count_outdated" : 650,
   "uniques_outdated" : 337,
-  "count" : 683,
+  "count" : 684,
   "uniques" : 355,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
